# barn_heuristic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  benchmark.py  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
assets/: index-BvjK-yLz.js  index-D14-dYi5.css
docs/: implementation-summary.md  web-ui-visualizer.md
go/: go.mod
go/ranknorm/: mockdata.go  mockdata_test.go  order_preservation_test.go  redistribute.go  redistribute_test.go
python/ranknorm/: __init__.py  mock_data.py  redistribute.py
python/tests/: test_mock_data.py  test_order_preservation.py  test_redistribute.py
web/: benchmark.js  benchmark.test.ts  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/components/: ControlsPanel.svelte  DistributionView.svelte  ScatterView.svelte
web/src/lib/: animation.test.ts  animation.ts  mockData.ts  normalize.test.ts  normalize.ts  types.ts
