[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranknorm"
version = "0.1.0"
description = "Ranking normalization SDK with multiple redistribution heuristics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["python/tests"]
